# barista-dex

./: .gitignore  LEVERAGE_IMPLEMENTATION.md  LEVERAGE_REDESIGN.md
cli/: .gitignore  README.md  jest.config.js  package.json  tsconfig.json
cli/src/: index.ts
cli/src/__tests__/: setup.ts
cli/src/__tests__/commands/: integration.test.ts
cli/src/__tests__/utils/: display.test.ts  wallet.test.ts
cli/src/commands/discovery/: instruments.ts  price.ts  slabInfo.ts  slabs.ts
cli/src/commands/market/: book.ts  price.ts
cli/src/commands/oracle/: README.md  init.ts  show.ts  update.ts
cli/src/commands/router/: deposit.ts  init.ts  portfolio.ts  trade.ts  withdraw.ts
cli/src/commands/trading/: buy.ts  sell.ts
cli/src/config/: networks.ts
cli/src/crank/: oracle-updater.ts
cli/src/utils/: display.ts  wallet.ts
keeper/: Cargo.toml  README.md
keeper/src/: cli.rs  config.rs  main.rs
keeper/src/oracle/: commands.rs  mod.rs  price_sources.rs
programs/router/: Cargo.toml
programs/router/src/: lib.rs
programs/router/src/oracle/: adapter.rs  custom.rs  mod.rs  pyth.rs
sdk/: .gitignore  README.md  jest.config.js  package-lock.json  package.json
sdk/src/: constants.ts  index.ts
sdk/src/clients/: RouterClient.ts  SlabClient.ts
sdk/src/clients/__tests__/: RouterClient.test.ts  (+1 more)
sdk/src/types/: discovery.ts  router.ts  slab.ts
sdk/src/utils/: formatting.ts  serialization.ts
thoughts/: ORACLE_CLI_IMPLEMENTATION_SUMMARY.md  ORACLE_INTEGRATION_PLAN.md  ORACLE_LOCALNET_DEVNET_GUIDE.md  PROJECT_DEVELOPMENT_HISTORY.md  PYTH_INTEGRATION_STATUS.md
(+2 files in other folders)
